--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,27 +3,46 @@
 	"version": "1.0.0",
 	"description": "",
 	"scripts": {
-		"start": "parcel src/index.html",
-		"start:dev": "parcel src/index.html",
-		"build": "tsc --incremental",
+		"start:dev": "webpack serve --mode=development --config webpack.config.js",
+		"build": "pnpm run clean && webpack --mode=production --config webpack.config.js",
 		"clean": "rm -rf build tsconfig.tsbuildinfo dist .parcel-cache"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
+	"private": true,
 	"packageManager": "pnpm@10.8.0",
 	"devDependencies": {
-		"@types/react": "^18.0.14",
-		"@types/react-dom": "^18.0.5",
+		"@parcel/resolver-default": "^2.14.4",
+		"@types/react": "^19.1.0",
+		"@types/react-dom": "^19.1.2",
+		"babel-loader": "^10.0.0",
+		"babel-plugin-transform-typescript-metadata": "^0.3.2",
 		"buffer": "^6.0.3",
-		"parcel": "^2.6.0",
-		"typescript": "^4.7.3"
+		"copy-webpack-plugin": "^13.0.0",
+		"expo-dev-menu": "^6.0.25",
+		"file-loader": "^6.2.0",
+		"html-webpack-plugin": "^5.6.3",
+		"metro-react-native-babel-preset": "^0.77.0",
+		"parcel": "^2.14.4",
+		"typescript": "^4.9.5",
+		"webpack": "^5.99.5",
+		"webpack-bundle-analyzer": "^4.10.2",
+		"webpack-cli": "^6.0.1",
+		"webpack-dev-server": "^5.2.1"
 	},
 	"dependencies": {
+		"@babel/runtime": "^7.27.0",
 		"axios": "^0.27.2",
+		"expo": "^52.0.44",
 		"process": "^0.11.10",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-native": "^0.79.0",
+		"react-native-paper": "^5.13.1",
+		"react-native-safe-area-context": "^5.3.0",
+		"react-native-vector-icons": "^10.2.0",
+		"react-native-web": "^0.20.0",
 		"validation": "workspace:*"
 	}
 }
