--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 /node_modules/
 /frontend/node_modules/
 /backend/node_modules/
-/shared/**/node_modules/
+/packages/**/node_modules/
 
 # Ignore build/compiled output directories
 /frontend/dist/
-/shared/**/build/
+/packages/**/build/
 
 # Ignore tsbuildinfo
 *.tsbuildinfo
