--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 		"@types/react": "^19.1.0",
 		"@types/react-dom": "^19.1.2",
 		"babel-loader": "^10.0.0",
+		"babel-plugin-module-resolver": "^5.0.2",
 		"babel-plugin-transform-typescript-metadata": "^0.3.2",
 		"buffer": "^6.0.3",
 		"copy-webpack-plugin": "^13.0.0",
@@ -43,6 +44,7 @@
 		"react-native-safe-area-context": "^5.3.0",
 		"react-native-vector-icons": "^10.2.0",
 		"react-native-web": "^0.20.0",
-		"validation": "workspace:*"
+		"validation": "workspace:*",
+		"grid": "workspace:*"
 	}
 }
