renamed backend/src/@types to types; split .env files into root, backend and web specific

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -9,7 +9,7 @@
 		"declarationDir": "build",
 		"emitDeclarationOnly": false,
 		"jsx": "preserve",
-		"typeRoots": ["./src/@types", "./node_modules/@types"],
+		"typeRoots": ["./src/types", "./node_modules/@types"],
 		"types": ["node", "express"]
 	},
 	"include": ["src"],
