--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,8 +3,8 @@
 	"version": "1.0.0",
 	"description": "",
 	"scripts": {
-		"start:dev": "webpack serve --mode=development --config webpack.config.js",
-		"build": "pnpm run clean && webpack --mode=production --config webpack.config.js",
+		"start:dev": "webpack serve --mode=development --config webpack.config.mjs",
+		"build": "pnpm run clean && webpack --mode=production --config webpack.config.mjs",
 		"clean": "rm -rf build tsconfig.tsbuildinfo dist .parcel-cache"
 	},
 	"keywords": [],
@@ -24,6 +24,8 @@
 		"babel-preset-expo": "^12.0.11",
 		"buffer": "^6.0.3",
 		"copy-webpack-plugin": "^13.0.0",
+		"dotenv": "^16.5.0",
+		"dotenv-webpack": "^8.1.0",
 		"expo-dev-menu": "^6.0.25",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.6.3",
@@ -49,6 +51,7 @@
 		"react-native-safe-area-context": "^5.3.0",
 		"react-native-vector-icons": "^10.2.0",
 		"react-native-web": "^0.20.0",
+		"url": "^0.11.4",
 		"validation": "workspace:*"
 	}
 }
