--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "types",
+  "name": "@types",
   "version": "1.0.0",
-  "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
     "clean": "rm -rf build tsconfig.tsbuildinfo",
@@ -10,7 +9,6 @@
   },
   "exports": {
     ".": {
-      "import": "./build/index.js",
       "types": "./build/index.d.ts"
     }
   },
