--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,10 +22,10 @@
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^22.14.1",
 		"nodemon": "^2.0.22",
-		"ts-node": "^10.9.2",
-		"typescript": "^4.9.5"
+		"ts-node": "^10.9.2"
 	},
 	"dependencies": {
+		"@types": "workspace:*",
 		"bcryptjs": "^3.0.2",
 		"body-parser": "^1.20.3",
 		"cors": "^2.8.5",
@@ -35,7 +35,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.13.2",
 		"socket.io": "^4.8.1",
-		"types": "workspace:*",
+		"typescript": "^5.8.3",
 		"validation": "workspace:*"
 	}
 }
