--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -6,5 +6,8 @@
 		"rootDir": "src"
 	},
 	"include": ["src"],
-	"exclude": ["node_modules", "build"]
+	"exclude": ["node_modules", "build"],
+	"references": [
+		{ "path": "../types" }
+	]
 }
