--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ui",
   "version": "1.0.0",
-  "main": "build/index.js",
+  "main": "src/index.js",
   "types": "build/index.d.ts",
   "exports": {
     ".": {
@@ -15,13 +15,10 @@
     "start:dev": "tsc --build -w"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-native": "0.79.0",
-    "react-native-web": "^0.20.0",
-    "types": "workspace:*"
+    "@navigation": "workspace:*",
+    "@types": "workspace:*"
   },
   "devDependencies": {
-    "@types/react": "^19.1.1",
-    "@types/react-native": "^0.73.0"
+    "@types/react": "^19.1.0"
   }
 }
