--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,22 +1,18 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "outDir": "build",
-    "rootDir": "src",
-    "declaration": true,
-    "declarationDir": "build",
-    "emitDeclarationOnly": false,
-    "types": ["react", "react-native"],
-    "jsx": "react-native",
-    "composite": true,
-    "baseUrl": ".",
-    "paths": {
-      "react-native": ["node_modules/react-native-web"]
-    }
-  },
-	"include": ["src"],
-  "exclude": ["node_modules", "build"],
-  "references": [
-    { "path": "../types" }
-  ]
+	"extends": "../../tsconfig.base.json",
+	"compilerOptions": {
+		"outDir": "build",
+		"rootDir": "src",
+		"declaration": true,
+		"declarationDir": "build",
+		"emitDeclarationOnly": false,
+		"types": ["react"],
+		"jsx": "react-native",
+		"composite": true
+	},
+		"include": ["src"],
+	"exclude": ["node_modules", "build"],
+	"references": [
+		{ "path": "../types" }
+	]
 }
