--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,22 +1,25 @@
 {
 	"compilerOptions": {
-	  "target": "ESNext",
-	  "module": "ESNext",
-	  "moduleResolution": "node",
-	  "allowJs": true,
-	  "strict": true,
-	  "resolveJsonModule": true,
-	  "esModuleInterop": true,
-	  "allowSyntheticDefaultImports": true,
-	  "skipLibCheck": true,
-	  "forceConsistentCasingInFileNames": true,
-	  "baseUrl": ".",
-	  "paths": {
-		"react-native": ["node_modules/react-native-web"],
-		"@auth/*": ["packages/auth/src/*"],
-		"@ui/*": ["packages/ui/src/*"],
-		"types/*": ["packages/types/src/*"],
-		"validation/*": ["packages/validation/src/*"]
-	  }
+		"target": "ESNext",
+		"module": "ESNext",
+		"moduleResolution": "node",
+		"allowJs": true,
+		"strict": true,
+		"resolveJsonModule": true,
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+		"typeRoots": ["./src/types", "./node_modules/@types"],
+		"types": ["node", "react"],
+		"baseUrl": ".",
+		"paths": {
+			"react-native": ["node_modules/react-native-web"],
+			"@auth/*": ["packages/auth/src/*"],
+			"@navigation/*": ["packages/navigation/src/*"],
+			"@ui/*": ["packages/ui/src/*"],
+			"@types/*": ["packages/types/src/*"],
+			"validation/*": ["packages/validation/src/*"]
+		}
 	}
 }
