--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,24 +1,28 @@
 {
     "name": "@auth",
     "version": "1.0.0",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "main": "build/index.js",
+    "types": "build/index.d.ts",
+    "exports": {
+    ".": {
+        "import": "./build/index.js",
+        "require": "./build/index.js",
+        "types": "./build/index.d.ts"
+        }
+    },
     "scripts": {
         "clean": "rm -rf build tsconfig.tsbuildinfo",
         "build": "tsc --build",
-        "start:dev": "tsc --build -w"
+        "dev": "tsc --build -w"
     },
     "dependencies": {
-        "@types": "workspace:*",
         "bcryptjs": "^3.0.2",
         "jsonwebtoken": "^9.0.2"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
-        "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.14.1",
-        "@types/react": "^19.1.1",
         "typescript": "^5.8.3"
     }
 }
