--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -6,8 +6,5 @@
 		"rootDir": "src"
 	},
 	"include": ["src"],
-	"exclude": ["node_modules", "build"],
-	"references": [
-		{ "path": "../types" }
-	]
+	"exclude": ["node_modules", "build"]
 }
