--- a/packages/navigation/package.json
+++ b/packages/navigation/package.json
@@ -1,21 +1,29 @@
 {
 	"name": "@navigation",
 	"version": "1.0.0",
-	"main": "src/index.js",
+	"main": "build/index.js",
 	"types": "build/index.d.ts",
+	"exports": {
+		".": {
+			"import": "./build/index.js",
+			"types": "./build/index.d.ts"
+		}
+	},
 	"scripts": {
 		"clean": "rm -rf build tsconfig.tsbuildinfo",
 		"build": "tsc --build",
-		"start:dev": "tsc --build -w"
+		"dev": "tsc --build -w"
 	},
 	"dependencies": {
-		"@navigation": "workspace:*",
+		"@screens": "workspace:*",
 		"@types": "workspace:*",
 		"@ui": "workspace:*",
+		"expo-linking": "^7.0.5",
 		"react-native-safe-area-context": "^5.4.0",
 		"react-native-screens": "^4.10.0"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.26.9",
 		"@types/react": "^19.1.2"
 	}
 }
