--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "@types",
-  "version": "1.0.0",
-  "types": "build/index.d.ts",
-  "scripts": {
-    "clean": "rm -rf build tsconfig.tsbuildinfo",
-    "build": "tsc --build",
-    "start:dev": "tsc --build -w"
-  },
-  "exports": {
-    ".": {
-      "types": "./build/index.d.ts"
+    "name": "@types",
+    "version": "1.0.0",
+    "main": "build/index.js",
+    "types": "build/index.d.ts",
+	"exports": {
+        ".": {
+            "import": "./build/index.js",
+            "types": "./build/index.d.ts"
+        }
+    },
+    "scripts": {
+		"build": "tsc --build",
+		"dev": "tsc --build -w",
+		"clean": "rm -rf build tsconfig.tsbuildinfo"
     }
-  },
-  "devDependencies": {
-    "@types/react": "^19.1.1",
-    "typescript": "^5.8.3"
-  }
 }
