--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,14 +1,15 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "composite": true,
-    "declaration": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": true,
-    "outDir": "build",
-    "rootDir": "src",
-    "strict": true
-  },
+	"extends": "../../tsconfig.base.json",
+	"compilerOptions": {
+		"composite": true,
+		"declaration": true,
+		"declarationMap": true,
+		"emitDeclarationOnly": true,
+		"outDir": "build",
+		"rootDir": "src",
+		"skipLibCheck": true,
+		"strict": true
+	},
 	"include": ["src"],
-  "exclude": ["node_modules", "build"]
+	"exclude": ["node_modules", "build"]
 }
