--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -10,6 +10,6 @@
 		"jsx": "react-native",
 		"composite": true
 	},
-	"include": ["src"],
+	"include": ["src/**/*"],
 	"exclude": ["node_modules", "build"]
 }
