--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,7 +26,7 @@
 	},
 	"dependencies": {
 		"@auth": "workspace:*",
-		"@types": "workspace:*",
+		"@iam/types": "workspace:*",
 		"@validation": "workspace:*",
 		"bcryptjs": "^3.0.2",
 		"body-parser": "^1.20.3",
