--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 	  { "path": "./apps/backend" },
 	  { "path": "./packages/auth" },
 	  { "path": "./packages/navigation" },
+	  { "path": "./packages/providers" },
 	  { "path": "./packages/ui" },
 	  { "path": "./packages/screens" },
 	  { "path": "./packages/services" },
