--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
 		"html-webpack-plugin": "^5.6.3",
 		"metro-react-native-babel-preset": "^0.77.0",
 		"parcel": "^2.14.4",
+		"react-native-reanimated": "^3.17.4",
 		"typescript": "^4.9.5",
 		"webpack": "^5.99.5",
 		"webpack-bundle-analyzer": "^4.10.2",
@@ -40,13 +41,16 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.27.0",
+		"@gorhom/bottom-sheet": "^5.1.2",
+		"@iam/types": "workspace:*",
 		"@navigation": "workspace:*",
-		"@ui": "workspace:*",
+		"@providers": "workspace:*",
 		"@services": "workspace:*",
-		"@types": "workspace:*",
+		"@ui": "workspace:*",
 		"@validation": "workspace:*",
 		"axios": "^0.27.2",
 		"expo": "^52.0.46",
+		"expo-linking": "^7.0.5",
 		"expo-modules-core": "^2.2.3",
 		"process": "^0.11.10",
 		"url": "^0.11.4"
