--- a/packages/navigation/package.json
+++ b/packages/navigation/package.json
@@ -15,10 +15,9 @@
 		"dev": "tsc --build -w"
 	},
 	"dependencies": {
+		"@iam/types": "workspace:*",
 		"@screens": "workspace:*",
-		"@types": "workspace:*",
 		"@ui": "workspace:*",
-		"expo-linking": "^7.0.5",
 		"react-native-safe-area-context": "^5.4.0",
 		"react-native-screens": "^4.10.0"
 	},
