--- a/packages/providers/tsconfig.json
+++ b/packages/providers/tsconfig.json
@@ -7,12 +7,9 @@
       "composite": true,
       "jsx": "react-native"
     },
-    "include": ["src", "../ui/src/modal"],
+    "include": ["src/**/*"],
     "exclude": ["node_modules", "build"],
     "references": [
-        { "path": "../providers" },
-        { "path": "../services" },
         { "path": "../types" },
-        { "path": "../ui" }
     ]
 }
