--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -17,7 +17,7 @@
     "dependencies": {
         "@hookform/resolvers": "^5.0.1",
         "@navigation": "workspace:*",
-        "@types": "workspace:*",
+        "@iam/types": "workspace:*",
         "axios": "^1.5.1",
         "expo-secure-store": "^12.2.0",
         "react-hook-form": "^7.55.0",
