--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@types",
+    "name": "@iam/types",
     "version": "1.0.0",
     "main": "build/index.js",
     "types": "build/index.d.ts",
