--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -11,5 +11,9 @@
 		"composite": true
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules", "build"]
+	"exclude": ["node_modules", "build"],
+	"references": [
+        { "path": "../services" },
+        { "path": "../types" }
+	]
 }
