--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,9 +19,10 @@
 			"react-native": ["node_modules/react-native-web"],
 			"@auth/*": ["packages/auth/src/*"],
 			"@navigation/*": ["packages/navigation/src/*"],
+			"@providers/*": ["packages/providers/src/*"],
 			"@screens/*": ["packages/screens/src/*"],
 			"@services/*": ["packages/services/src/*"],
-			"@types/*": ["packages/types/src/*"],
+			"@iam/types/*": ["packages/types/src/*"],
 			"@ui/*": ["packages/ui/src/*"],
 			"@validation/*": ["packages/validation/src/*"]
 		}
