--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -13,6 +13,7 @@
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "build"],
 	"references": [
+        { "path": "../auth" },
         { "path": "../services" },
         { "path": "../types" }
 	]
