--- a/packages/providers/package.json
+++ b/packages/providers/package.json
@@ -11,6 +11,8 @@
 	"dependencies": {
 		"@gorhom/bottom-sheet": "^5.1.2",
 		"@iam/types": "workspace:*",
+		"@navigation": "workspace:*",
+		"@services": "workspace:*",
 		"axios": "^1.8.4"
 	}
 }
