--- a/packages/providers/tsconfig.json
+++ b/packages/providers/tsconfig.json
@@ -10,6 +10,7 @@
     "include": ["src/**/*"],
     "exclude": ["node_modules", "build"],
     "references": [
-        { "path": "../types" },
+        { "path": "../services" },
+        { "path": "../types" }
     ]
 }
