added Navbar, ProfileScreen, and custom ui hooks.

--- a/packages/providers/tsconfig.json
+++ b/packages/providers/tsconfig.json
@@ -7,7 +7,7 @@
       "composite": true,
       "jsx": "react-native"
     },
-    "include": ["src/**/*"],
+    "include": ["src"],
     "exclude": ["node_modules", "build"],
     "references": [
         { "path": "../services" },
