added userlist screen; misc updates and improvements

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,11 +6,11 @@
 		"declaration": true,
 		"declarationDir": "build",
 		"emitDeclarationOnly": false,
-		"types": ["react"],
+		"types": ["react", "node"],
 		"jsx": "react-native",
 		"composite": true
 	},
-	"include": ["src", "../providers/src/storage.ts"],
+	"include": ["src"],
 	"exclude": ["node_modules", "build"],
 	"references": [
         { "path": "../auth" },
