--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,9 +18,10 @@
 		"@types/body-parser": "^1.19.5",
 		"@types/cookie-parser": "^1.4.8",
 		"@types/cors": "^2.8.17",
-		"@types/express": "^4.17.21",
+		"@types/express": "^5.0.1",
 		"@types/express-session": "^1.18.1",
 		"@types/jsonwebtoken": "^9.0.9",
+		"@types/multer": "^1.4.12",
 		"@types/node": "^22.14.1",
 		"nodemon": "^2.0.22",
 		"ts-node": "^10.9.2"
@@ -38,6 +39,7 @@
 		"express-session": "^1.18.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.13.2",
+		"multer": "1.4.5-lts.2",
 		"socket.io": "^4.8.1",
 		"typescript": "^5.8.3"
 	}
