fixed issues with upload and display of images; added tests.

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -13,7 +13,7 @@
 			"./node_modules/@types",
 			"../../node_modules/@types"
 		],
-		"types": ["express"]
+		"types": ["express", "jest"]
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "build"],
