--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,7 +13,7 @@
         "declaration": true,
         "declarationMap": true,
 		"typeRoots": ["./node_modules/@types"],
-		"types": ["node"],
+		"types": ["jest", "node"],
 		"baseUrl": ".",
 		"paths": {
 			"react-native": ["node_modules/react-native-web"],
