--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,7 +7,8 @@
 		"clean": "rm -rf build tsconfig.tsbuildinfo",
 		"build": "tsc --build",
 		"start": "node src/index.ts",
-		"dev": "nodemon"
+		"dev": "nodemon",
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "",
@@ -20,6 +21,7 @@
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.1",
 		"@types/express-session": "^1.18.1",
+		"@types/jest": "^29.5.14",
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/multer": "^1.4.12",
 		"@types/node": "^22.14.1",
@@ -39,6 +41,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.13.2",
 		"multer": "1.4.5-lts.2",
+		"sharp": "^0.34.1",
 		"socket.io": "^4.8.1",
 		"typescript": "^5.8.3"
 	}
