--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"build": "pnpm --stream -r run build",
 		"clean": "rm -rf .parcel-cache && pnpm -r run clean",
 		"lint": "eslint . --ext .ts,.tsx --fix",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "",
@@ -21,11 +22,14 @@
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.1",
 		"@types/express-session": "^1.18.1",
+		"@types/jest": "^29.5.14",
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^22.14.1",
 		"@types/nodemailer": "^6.4.17",
 		"@types/react": "19.1.2",
 		"buffer": "^6.0.3",
+		"jest": "^29.7.0",
+		"ts-jest": "^29.3.2",
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
