--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -12,6 +12,7 @@
     "scripts": {
 		"build": "tsc --build",
 		"dev": "tsc --build -w",
-		"clean": "rm -rf build tsconfig.tsbuildinfo"
+		"clean": "rm -rf build tsconfig.tsbuildinfo",
+        "test": "jest"
     }
 }
