--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"clean": "rm -rf .parcel-cache && pnpm -r run clean",
 		"lint": "eslint . --ext .ts,.tsx --fix",
 		"format": "prettier --write .",
-		"test": "jest"
+		"test": "jest",
+        "webhook:start": "node webhook.js"
 	},
 	"keywords": [],
 	"author": "",
