--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"lint": "eslint . --ext .ts,.tsx --fix",
 		"format": "prettier --write .",
 		"test": "jest",
-        "webhook:start": "node webhook.js"
+		"webhook:start": "node webhook.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -28,7 +28,9 @@
 		"@types/node": "^22.14.1",
 		"@types/nodemailer": "^6.4.17",
 		"@types/react": "19.1.2",
+		"body-parser": "^1.20.3",
 		"buffer": "^6.0.3",
+		"express": "^4.21.2",
 		"jest": "^29.7.0",
 		"ts-jest": "^29.3.2",
 		"typescript": "^5.8.3"
