--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,10 @@
 	"private": true,
 	"packageManager": "pnpm@10.8.0",
 	"devDependencies": {
+		"@babel/plugin-proposal-optional-chaining": "^7.21.0",
+		"@babel/plugin-transform-class-properties": "^7.27.1",
+		"@babel/plugin-transform-private-methods": "^7.27.1",
+		"@babel/plugin-transform-private-property-in-object": "^7.27.1",
 		"@babel/plugin-transform-runtime": "^7.26.10",
 		"@babel/preset-env": "^7.26.9",
 		"@babel/preset-react": "^7.27.1",
