--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,9 +17,9 @@
 		"baseUrl": ".",
 		"paths": {
 			"react-native": ["node_modules/react-native-web"],
-			"@auth/*": ["packages/auth/src/*"],
-			"@services/*": ["packages/services/src/*"],
-			"@iam/types/*": ["packages/types/src/*"]
+			"@auth/*": ["packages/auth/build/*"],
+			"@services/*": ["packages/services/build/*"],
+			"@iam/types/*": ["packages/types/build/*"]
 		}
 	}
 }
