--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,7 @@
 {
-	"compilerOptions": {
+    "compilerOptions": {
 		"target": "ESNext",
-		"module": "ESNext",
+		"module": "CommonJS",
 		"moduleResolution": "Node",
 		"allowJs": true,
 		"strict": true,
@@ -10,8 +10,8 @@
 		"allowSyntheticDefaultImports": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-        "declaration": true,
-        "declarationMap": true,
+		"declaration": true,
+		"declarationMap": true,
 		"typeRoots": ["./node_modules/@types"],
 		"types": ["jest", "node"],
 		"baseUrl": ".",
@@ -21,5 +21,5 @@
 			"@services/*": ["packages/services/build/*"],
 			"@iam/types/*": ["packages/types/build/*"]
 		}
-	}
-}
+    }
+}  
