split frontend .env files for dev/prod

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,9 @@ webhook.js
 # Ignore log files
 *.log
 
-# Ignore environment variable files (make sure to add your .env files here)
-*.env
+# Ignore all .env files
+.env
+.env.*
 
 # Ignore temporary files created by IDEs/editors
 .vscode/
