--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# Ignore node_modules directories
-/node_modules/
-/**/*/node_modules/
+# Ignore all node_modules directories (root and nested)
+node_modules/
+**/node_modules/
 
 # Ignore build/compiled output directories
 /**/*/dist/
