--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,11 +3,11 @@
 	"version": "1.0.0",
 	"description": "",
 	"scripts": {
-        "dev": "cross-env NODE_ENV=development webpack serve",
-        "build": "pnpm run clean && cross-env NODE_ENV=production webpack --mode production",
-        "clean": "rm -rf build tsconfig.tsbuildinfo dist .parcel-cache",
-        "test": "jest"
-    },
+		"dev": "cross-env NODE_ENV=development webpack serve",
+		"build": "pnpm run clean && NODE_ENV=production webpack --mode production",
+		"clean": "rm -rf build tsconfig.tsbuildinfo dist .parcel-cache",
+		"test": "jest"
+	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
@@ -33,7 +33,6 @@
 		"babel-preset-expo": "^12.0.11",
 		"buffer": "^6.0.3",
 		"copy-webpack-plugin": "^13.0.0",
-		"cross-env": "^7.0.3",
 		"dotenv": "^16.5.0",
 		"dotenv-webpack": "^8.1.0",
 		"expo-dev-menu": "^6.0.25",
