--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"scripts": {
-		"dev": "cross-env NODE_ENV=development webpack serve",
+		"dev": "NODE_ENV=development webpack serve",
 		"build": "pnpm run clean && NODE_ENV=production webpack --mode production",
 		"clean": "rm -rf build tsconfig.tsbuildinfo dist .parcel-cache",
 		"test": "jest"
