--- a/package.json
+++ b/package.json
@@ -4,54 +4,55 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-		"start": "pnpm --stream -r start",
-		"dev": "pnpm --parallel --stream -r run dev",
-		"build": "pnpm --stream -r run build",
-		"clean": "rm -rf .parcel-cache && pnpm -r run clean",
-		"lint": "eslint . --ext .ts,.tsx --fix",
-		"format": "prettier --write .",
-		"test": "jest",
-		"webhook:start": "node scripts/webhook.js",
-		"sync:deploy": "bash sync-deploy-files.sh"
+        "start": "pnpm --stream -r start",
+        "dev": "pnpm --parallel --stream -r run dev",
+        "build": "pnpm --stream -r run build",
+        "clean": "rm -rf .parcel-cache && pnpm -r run clean",
+        "lint": "eslint . --ext .ts,.tsx --fix",
+        "format": "prettier --write .",
+        "test": "jest",
+        "webhook:start": "node scripts/webhook.js",
+        "sync:deploy": "bash sync-deploy-files.sh"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "packageManager": "pnpm@10.8.0",
     "devDependencies": {
-		"@babel/preset-env": "^7.1.6",
-		"@types/cookie-parser": "^1.4.8",
-		"@types/cors": "^2.8.17",
-		"@types/express": "^5.0.1",
-		"@types/express-session": "^1.18.1",
-		"@types/jest": "^29.5.14",
-		"@types/jsonwebtoken": "^9.0.9",
-		"@types/node": "^22.14.1",
-		"@types/nodemailer": "^6.4.17",
-		"@types/react": "19.1.2",
-		"body-parser": "^1.20.3",
-		"buffer": "^6.0.3",
-		"express": "^4.21.2",
-		"jest": "^29.7.0",
-		"ts-jest": "^29.3.2",
-		"typescript": "^5.8.3"
+        "@babel/preset-env": "^7.1.6",
+        "@types/cookie-parser": "^1.4.8",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.1",
+        "@types/express-session": "^1.18.1",
+        "@types/jest": "^29.5.14",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/node": "^22.14.1",
+        "@types/nodemailer": "^6.4.17",
+        "@types/react": "19.1.2",
+        "body-parser": "^1.20.3",
+        "buffer": "^6.0.3",
+        "dotenv": "^16.5.0",
+        "express": "^4.21.2",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.3.2",
+        "typescript": "^5.8.3"
     },
     "dependencies": {
-		"@babel/runtime": "^7.27.0",
-		"@gorhom/bottom-sheet": "^5.1.2",
-		"@hookform/resolvers": "^5.0.1",
-		"@react-native-async-storage/async-storage": "1.23.1",
-		"@react-navigation/core": "7.8.5",
-		"@react-navigation/native": "7.1.7",
-		"@react-navigation/stack": "^7.2.10",
-		"expo": "^52.0.46",
-		"expo-secure-store": "^14.0.1",
-		"nodemailer": "^6.10.1",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"react-hook-form": "^7.55.0",
-		"react-native": "^0.79.1",
-		"react-native-web": "^0.20.0",
-		"zod": "^3.24.3"
+        "@babel/runtime": "^7.27.0",
+        "@gorhom/bottom-sheet": "^5.1.2",
+        "@hookform/resolvers": "^5.0.1",
+        "@react-native-async-storage/async-storage": "1.23.1",
+        "@react-navigation/core": "7.8.5",
+        "@react-navigation/native": "7.1.7",
+        "@react-navigation/stack": "^7.2.10",
+        "expo": "^52.0.46",
+        "expo-secure-store": "^14.0.1",
+        "nodemailer": "^6.10.1",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-hook-form": "^7.55.0",
+        "react-native": "^0.79.1",
+        "react-native-web": "^0.20.0",
+        "zod": "^3.24.3"
     }
-}  
+}
