--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -61,6 +61,7 @@
 		"metro-resolver": "^0.82.2",
 		"process": "^0.11.10",
 		"react-native-gesture-handler": "^2.25.0",
+		"react-native-keyboard-aware-scroll-view": "^0.9.5",
 		"react-native-pager-view": "^6.7.0",
 		"react-native-reanimated": "^3.17.5",
 		"react-native-safe-area-context": "^5.4.0",
