added shared @utils package; cleaned up redundant user types.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -30,6 +30,7 @@
 	},
 	"dependencies": {
 		"@auth": "workspace:*",
+		"@utils": "workspace:*",
 		"@iam/types": "workspace:*",
 		"bcryptjs": "^3.0.2",
 		"body-parser": "^1.20.3",
