--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@react-navigation/stack": "^7.2.10",
         "expo": "^52.0.46",
         "expo-secure-store": "^14.0.1",
+        "mongoose": "^8.15.0",
         "nodemailer": "^6.10.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
