--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -3,12 +3,8 @@
 	"compilerOptions": {
 		"composite": true,
 		"declaration": true,
-		"declarationMap": true,
-		"emitDeclarationOnly": true,
 		"outDir": "./build",
-		"rootDir": "src",
-		"skipLibCheck": true,
-		"strict": true
+		"rootDir": "src"
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "build"]
