--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,22 +1,27 @@
 {
-    "name": "@iam/types",
+    "name": "@utils",
     "version": "1.0.0",
-    "main": "build/index.ts",
+    "main": "build/index.js",
     "types": "build/index.d.ts",
     "exports": {
         ".": {
             "import": "./build/index.js",
             "require": "./build/index.js",
             "types": "./build/index.d.ts"
+        },
+        "./*": {
+            "import": "./build/*.js",
+            "require": "./build/*.js"
         }
     },
     "scripts": {
+        "clean": "rm -rf build tsconfig.tsbuildinfo",
         "build": "tsc --build",
         "dev": "tsc --build -w",
-        "clean": "rm -rf build tsconfig.tsbuildinfo",
         "test": "jest"
     },
     "dependencies": {
-        "mongoose": "^8.14.1"
+        "@iam/types": "workspace:*",
+        "mongoose": "^8.15.0"
     }
 }
