--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,10 +16,11 @@
 		"types": ["jest", "node"],
 		"baseUrl": ".",
 		"paths": {
-			"react-native": ["node_modules/react-native-web"],
-			"@auth/*": ["packages/auth/build/*"],
-			"@services/*": ["packages/services/build/*"],
-			"@iam/types/*": ["packages/types/build/*"]
-		}
+            "react-native": ["node_modules/react-native-web"],
+            "@auth/*": ["packages/auth/build/*"],
+            "@services/*": ["packages/services/build/*"],
+            "@iam/types/*": ["packages/types/build/*"],
+            "@utils/*": ["packages/utils/build/*"]
+        }
     }
-}  
+}
