--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 	  { "path": "./apps/backend" },
 	  { "path": "./packages/auth" },
 	  { "path": "./packages/services" },
-	  { "path": "./packages/types" }
+	  { "path": "./packages/types" },
+	  { "path": "./packages/utils" }
 	]
 }
