added improved ImageUploader and thumbnails to uploading logic

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@iam/types",
     "version": "1.0.0",
+    "type": "commonjs",
     "main": "build/index.ts",
     "types": "build/index.d.ts",
     "exports": {
