--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,6 +2,7 @@
 	"name": "backend",
 	"version": "1.0.0",
 	"description": "",
+    "type": "commonjs",
 	"main": "src/index.ts",
 	"scripts": {
 		"clean": "rm -rf build tsconfig.tsbuildinfo",
