--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,7 @@
 	"name": "web",
 	"version": "1.0.0",
 	"description": "",
+	"type": "commonjs",
 	"scripts": {
 		"dev": "NODE_ENV=development webpack serve",
 		"build": "pnpm run clean && NODE_ENV=production webpack --mode production",
@@ -53,6 +54,7 @@
 		"@services": "workspace:*",
 		"@utils": "workspace:*",
 		"axios": "^0.27.2",
+		"exif-js": "^2.3.0",
 		"expo": "^52.0.46",
 		"expo-image-picker": "^16.1.4",
 		"expo-linking": "^7.0.5",
