--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "@iam",
     "version": "1.0.0",
     "description": "",
+    "type": "commonjs",
     "main": "index.js",
     "scripts": {
         "start": "pnpm --stream -r start",
