--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -15,6 +15,7 @@
 	"include": ["src"],
 	"exclude": ["node_modules", "build"],
 	"references": [
-        { "path": "../types" }
+        { "path": "../types" },
+        { "path": "../utils" }
 	]
 }
