removed mongo log (seems the error wasnot on my end; added expo-image-picker options to skip options menu when selecting image library in ImageUploader.

--- a/app.json
+++ b/app.json
@@ -2,6 +2,12 @@
     "expo": {
         "plugins": [
             [
+                "expo-image-picker",
+                {
+                     "photosPermission": "Allow $(PRODUCT_NAME) to access your photo library"
+                }
+            ],
+            [
                 "expo-camera",
                 {
                     "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
