removed sync:uploads script - already run in sync:deploy

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
         "format": "prettier --write .",
         "test": "jest",
         "webhook:start": "node scripts/webhook.js",
-        "sync:deploy": "bash scripts/sync-deploy-files.sh",
-        "sync:uploads": "bash scripts/sync-uploads.sh"
+        "sync:deploy": "bash scripts/sync-deploy-files.sh"
     },
     "keywords": [],
     "author": "",
