--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -9,6 +9,6 @@
 	"exclude": ["node_modules", "build"],
 	"references": [
         { "path": "../types" },
-        { "path": "../utils" },
+        { "path": "../utils" }
 	]
 }
