--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,14 +2,15 @@
 	"name": "backend",
 	"version": "1.0.0",
 	"description": "",
-    "type": "commonjs",
+	"type": "commonjs",
 	"main": "src/index.ts",
 	"scripts": {
 		"clean": "rm -rf build tsconfig.tsbuildinfo",
 		"build": "tsc --build",
 		"start": "node src/index.ts",
 		"dev": "nodemon",
-		"test": "jest"
+		"test": "jest",
+        "postinstall": "npx puppeteer browsers install chrome"
 	},
 	"keywords": [],
 	"author": "",
@@ -31,18 +32,24 @@
 	},
 	"dependencies": {
 		"@auth": "workspace:*",
-		"@utils": "workspace:*",
 		"@iam/types": "workspace:*",
+		"@utils": "workspace:*",
 		"bcryptjs": "^3.0.2",
 		"body-parser": "^1.20.3",
+		"browserless": "^10.7.11",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
 		"express": "^4.21.2",
 		"express-session": "^1.18.1",
 		"jsonwebtoken": "^9.0.2",
+		"metascraper": "^5.46.15",
+		"metascraper-description": "^5.46.15",
+		"metascraper-image": "^5.46.15",
+		"metascraper-title": "^5.46.15",
 		"mongoose": "^8.13.2",
 		"multer": "1.4.5-lts.2",
+		"puppeteer": "^24.9.0",
 		"sharp": "^0.34.1",
 		"socket.io": "^4.8.1",
 		"typescript": "^5.8.3"
