--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -63,6 +63,7 @@
 		"metro-config": "^0.82.2",
 		"metro-resolver": "^0.82.2",
 		"process": "^0.11.10",
+		"react-native-autolink": "^4.2.0",
 		"react-native-gesture-handler": "^2.25.0",
 		"react-native-keyboard-aware-scroll-view": "^0.9.5",
 		"react-native-pager-view": "^6.7.0",
