--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,7 +10,7 @@
 		"start": "node src/index.ts",
 		"dev": "nodemon",
 		"test": "jest",
-        "postinstall": "npx puppeteer browsers install chrome"
+		"postinstall": "npx puppeteer browsers install chrome"
 	},
 	"keywords": [],
 	"author": "",
@@ -44,6 +44,8 @@
 		"express-session": "^1.18.1",
 		"jsonwebtoken": "^9.0.2",
 		"metascraper": "^5.46.15",
+		"metascraper-author": "^5.46.17",
+		"metascraper-date": "^5.46.17",
 		"metascraper-description": "^5.46.15",
 		"metascraper-image": "^5.46.15",
 		"metascraper-title": "^5.46.15",
