--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.6.3",
 		"metro-react-native-babel-preset": "^0.77.0",
+		"terser-webpack-plugin": "^5.3.14",
 		"typescript": "^4.9.5",
 		"webpack": "^5.99.5",
 		"webpack-bundle-analyzer": "^4.10.2",
