--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -53,6 +53,7 @@
 		"puppeteer": "^24.9.0",
 		"sharp": "^0.34.1",
 		"socket.io": "^4.8.1",
-		"typescript": "^5.8.3"
+		"typescript": "^5.8.3",
+		"youtube-meta-data": "^0.1.6"
 	}
 }
