--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -50,7 +50,10 @@
 		"metascraper-title": "^5.46.15",
 		"mongoose": "^8.13.2",
 		"multer": "1.4.5-lts.2",
+		"node-fetch": "^3.3.2",
 		"puppeteer": "^24.9.0",
+		"puppeteer-extra": "^3.3.6",
+		"puppeteer-extra-plugin-stealth": "^2.11.2",
 		"sharp": "^0.34.1",
 		"socket.io": "^4.8.1",
 		"typescript": "^5.8.3",
