--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,7 +36,7 @@
 		"copy-webpack-plugin": "^13.0.0",
 		"dotenv": "^16.5.0",
 		"dotenv-webpack": "^8.1.0",
-		"expo-dev-menu": "^6.0.25",
+		"expo": "^52.0.46",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.6.3",
 		"metro-react-native-babel-preset": "^0.77.0",
@@ -57,14 +57,17 @@
 		"axios": "^0.27.2",
 		"date-fns": "^4.1.0",
 		"exif-js": "^2.3.0",
-		"expo": "^52.0.46",
-		"expo-image-picker": "^16.1.4",
+		"expo-camera": "~16.0.18",
+		"expo-image-picker": "^16.0.6",
 		"expo-linking": "^7.0.5",
-		"expo-modules-core": "^2.2.3",
-		"metro": "^0.82.2",
-		"metro-config": "^0.82.2",
-		"metro-resolver": "^0.82.2",
+		"expo-secure-store": "~14.0.1",
+		"metro": "^0.82.4",
+		"metro-config": "^0.82.4",
+		"metro-resolver": "^0.82.4",
 		"process": "^0.11.10",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
+		"react-native": "0.76.9",
 		"react-native-autolink": "^4.2.0",
 		"react-native-gesture-handler": "^2.25.0",
 		"react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -73,7 +76,7 @@
 		"react-native-safe-area-context": "^5.4.0",
 		"react-native-screens": "^4.10.0",
 		"react-native-vector-icons": "^10.2.0",
-		"react-native-web": "^0.20.0",
+		"react-native-web": "^0.19.13",
 		"react-webcam": "^7.2.0",
 		"socket.io-client": "^4.8.1",
 		"url": "^0.11.4"
