--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.14.1",
         "@types/nodemailer": "^6.4.17",
-        "@types/react": "19.1.2",
-        "@types/react-dom": "19.1.6",
+        "@types/react": "^18.2.6",
+        "@types/react-dom": "^18.2.6",
         "body-parser": "^1.20.3",
         "buffer": "^6.0.3",
         "dotenv": "^16.5.0",
@@ -49,8 +49,8 @@
         "@react-navigation/stack": "^7.2.10",
         "mongoose": "^8.15.0",
         "nodemailer": "^6.10.1",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-hook-form": "^7.55.0",
         "react-native": "^0.79.1",
         "react-native-vector-icons": "^10.2.0",
