--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
         "@react-navigation/core": "7.8.5",
         "@react-navigation/native": "7.1.9",
         "@react-navigation/stack": "^7.2.10",
+        "expo-camera": "~16.0.18",
+        "expo-image-picker": "^16.0.6",
         "mongoose": "^8.15.0",
         "nodemailer": "^6.10.1",
         "react": "^18.2.0",
