--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -22,6 +22,7 @@
         "@utils": "workspace:*",
         "axios": "^1.5.1",
         "expo-secure-store": "^12.2.0",
+        "jwt-decode": "^4.0.0",
         "react-hook-form": "^7.55.0",
         "zod": "^3.24.3"
     },
