--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -10,7 +10,8 @@
 		"rootDir": "src",
 		"strict": true,
 		"noEmitOnError": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+        "esModuleInterop": true
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "build"],
