--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -71,6 +71,7 @@
 		"react-native-safe-area-context": "^5.4.0",
 		"react-native-screens": "^4.10.0",
 		"react-native-vector-icons": "^10.2.0",
+		"react-native-webview": "^13.15.0",
 		"react-webcam": "^7.2.0",
 		"socket.io-client": "^4.8.1",
 		"url": "^0.11.4"
