--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -10,7 +10,8 @@
         "baseUrl": "./src",
         "paths": {
             "@/*": ["*"]
-        }
+        },
+        "esModuleInterop": true
 	},
 	"include": [
 		"src",
